some responsiveness added

--- a/main.css
+++ b/main.css
@@ -1,132 +1,48 @@
+
+
+
+.containy{
+  background-color: transparent;
+}
 .nav a {main
   color: #5a5a5a;
-  font-size: 11px;
-  font-weight: bold;
+  font-size: 16px;
+  /* font-weight: bold; */
   padding: 14px 10px;
-  text-transform: uppercase;
+  /*text-transform: uppercase; */
 }
+
+
 
 .nav li {
   display: inline;
   position: relative;
+  float: left;
 }
 .nav ul{
   display: inline;
 
 }
-body{
+.navbar .navbar-nav {
+  display: inline-block;
+ float: none; 
+  vertical-align: top;
+}
 
+.navbar .navbar-collapse {
+  text-align: center;
+}
+nav{
+  margin-bottom: 100px;
+}
+body{
+background-color: #ffccff;
 padding-top: 30px;
 }
-.jumbotron {
-  background-image:url('http://goo.gl/04j7Nn');
-  height: 500px;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.jumbotron .container {
-  position: relative;
-  top:100px;
-}
-
-.jumbotron h1 {
-  color: #fff;
-  font-size: 48px;  
-  font-family: 'Shift', sans-serif;
-  font-weight: bold;
-}
-
-.jumbotron p {
-  font-size: 20px;
-  color: #fff;
-}
-
-.learn-more {
-  background-color: #f7f7f7;
-}
-
-.learn-more h3 {
-  font-family: 'Shift', sans-serif;
-  font-size: 18px;
-  font-weight: bold;
-}
-
-.learn-more a {
-  color: #00b0ff;
-}
-
-.neighborhood-guides{
-    background-color: #efefef;
-    border-bottom:1px solid #dbdbdb;
-    
-    
-}
-
-.neighborhood-guides h2{
-   color: #393c3d;
-    font-size:24px;
-    
-    
-}
-.neighborhood-guides p{
-   
-    font-size:15px;
-    margin-bottom:13px;
-    
-}
-
-.relCourses{
-
-  background-color: #66ccff;
-padding-left: 10%;
-padding-right: 10%;
-margin-right: 10%;
-margin-left: 10%;
 
 
-}
-.relExp{
-background-color: #66ccff;
-padding-left: 10%;
-padding-right: 10%;
-margin-right: 10%;
-margin-left: 10%;
-
-}
-.engProj{
-
-  background-color: #66cc00;
-padding-left: 10%;
-padding-right: 10%;
-margin-right: 10%;
-margin-left: 10%;
-}
-  
-.leadAct{
-  background-color: #6600ff;
-padding-left: 10%;
-padding-right: 10%;
-margin-right: 10%;
-margin-left: 10%;
-}
-.skills{
- background-color: #00ccff;
-padding-left: 10%;
-padding-right: 10%;
-margin-right: 10%;
-margin-left: 10%;
-}
-.education{
-  background-color: #66ffff;
-padding-left: 10%;
-padding-right: 10%;
-margin-right: 10%;
-margin-left: 10%;
-  
-}
 .contactDetails{
-background-color: #ffccff;
+background-color: transparent;
 padding-left: 10%;
 padding-right: 10%;
 margin-right: 10%;
@@ -141,11 +57,13 @@ margin-left: 10%;
 
 }
 .jheader {
+  
   margin-top: 0px;
   padding-top: 50px;
   padding-bottom: 50px;
   text-align: center;
-  background-color: #bbeeff;
+  /*background-image: url(http://dreamatico.com/data_images/stars/stars-2.jpg); */
+  text-decoration: none;
 }
 .row{
 
@@ -155,22 +73,27 @@ margin-left: 10%;
 #projectsheader{
   text-align: center;
   margin-top: 100px;
+  background-color: transparent;
 }
+
+
 #contactDetails{
   text-align: center;
+  width: 250px;
 }
 .subcontent{
   margin-left: auto;
   margin-right: auto;
-  width: 70%;
+  margin: 0 auto;
+  width: 800px;
+  text-align: center;
+  background-color: transparent;
 
 }
 #aboutme{
   text-align: center;
 }
-body{
-          background-color: #777788;
-      }
+
       img{
         max-width: 100%;
         max-height: 100%;
@@ -187,7 +110,7 @@ body{
 
       }
       .proj_txt{
-        position: relative;
+        
         background-color: yellow;
         width: 70%;
         float: left;
@@ -203,10 +126,12 @@ body{
         margin: 20px;
       }
       .content_exp{
+        
           width: 70%;
           color: white;
           margin: 0 auto;
-          margin-bottom: 60px;
+          margin-top:20px;
+          margin-bottom: 20px;
           position: relative;
       }
       .carousel-indicators{
@@ -214,90 +139,103 @@ body{
       }
       .exp_title{
           color:white;
-          font-size: 3.0vmax;
+          font-size: 24px;
+      }
+      .exp_title a{
+
+        text-decoration: none;
+        color:white;
       }
       .exp_posn{
-          font-size: 2.0vmax
+          font-size: 18px;
       }
       p{
-          font-size: 1vmax;
+          font-size: 16px;
       }
       .carousel{
         /* height: 40vh; */
-        height: 300px;
+        
       }
 
-      @media all and (max-width: 650px) and (min-width: 350px){
+@media all and (max-width: 400px) and (min-width: 250px){
 
-        .carousel{
-          height: 450px;
+        .nav{
 
-        }
-        .content_exp{
-          width: 70%;
-          color: white;
-          margin: 0 auto;
-          margin-bottom: 60px;
-      }
-      .exp_title{
-          color:white;
-          font-size: 4.0vmax;
-      }
-      .exp_posn{
-          font-size: 3.0vmax
-      }
-      p{
-          font-size: 2vmax;
-      }
-}
-
-@media all and (max-width: 349px) and (min-width: 50px){
-
-        .carousel{
-          height: 550px;
+          width: 100%;
 
         }
-        .content_exp{
-          width: 70%;
-          color: white;
+        .navbar-collapse{
+          width: 100%;
+        }
+        .nav a {main
+          color: #5a5a5a;
+          font-size: 16px;
+          /* font-weight: bold; */
+          padding: 14px 10px;
+          /*text-transform: uppercase; */
+        }
+
+
+
+        .nav li {
+          display: inline;
+          position: relative;
+          float: left;
+        }
+        .nav ul{
+          display: inline;
+
+        }
+        .navbar .navbar-nav {
+          display: inline-block;
+         float: none; 
+          vertical-align: top;
+        }
+
+        .navbar .navbar-collapse {
+          text-align: center;
+        }
+        nav{
+          margin-bottom: 100px;
+        }
+        .subcontent{
+          margin-left: auto;
+          margin-right: auto;
           margin: 0 auto;
-          margin-bottom: 60px;
-      }
-      .exp_title{
-          color:white;
-          font-size: 5.0vmax;
-      }
-      .exp_posn{
-          font-size: 4.0vmax
-      }
-      p{
-          font-size: 3vmax;
-      }
-}
-.navj{
-  margin: 0 auto;
-  float:none;
-}
-.navbar .navbar-nav {
-  display: inline-block;
-  float: none;
-  vertical-align: top;
+          width: 300px;
+          text-align: center;
+
+        }
+        #myCarousel2{
+
+          height: 900px;
+        }
+        #myCarousel{
+          height: 1100px;
+        }
 }
 
-.navbar .navbar-collapse {
-  text-align: center;
+@media all and (max-width: 801px) and (min-width: 599px){
+
+        
 }
-nav{
-  margin-bottom: 100px;
-}
+
+
 #contactDetails p a{
     color: inherit; 
     text-decoration: none;
 }
 #myCarousel2{
 
-  height: 450px;
+  height: 510px;
 }
 #myCarousel{
-  height: 370px;
+  height: 400px;
+}
+#link_doors{
+  color: white;
+}
+
+.intro_band{
+  background-color: transparent;
 }
